--- a/styles/style.scss
+++ b/styles/style.scss
@@ -16,6 +16,14 @@ body {
   transition: all 1s ease-in-out;
 }
 
+/* For tablets: */
+@media only screen and (max-width: 768px) {
+
+
+}
+
+
+
 /*vse za dnevno temo*/
 body.day {
   color: #061a33;
@@ -113,6 +121,18 @@ a {
   text-decoration: none;
 }
 
+/*ime sekcije*/
+
+.sectionname {
+  position: absolute;
+  text-align: center;
+  font-size: 2rem;
+  writing-mode: vertical-rl;
+  left: 9rem;
+  top: 65%;
+}
+
+
 /*dnevni paralax*/
 
 body.day .paralax-container {
@@ -129,7 +149,7 @@ body.day .paralax-container-2 {
   border-left: 3pt solid #ff4d5a;
   height: 55%;
   position: fixed;
-  margin-left: 90px;
+  margin-left: 9rem;
   top: 55%;
   bottom: 0;
 }
@@ -183,14 +203,49 @@ body.day #fp-nav ul li a span,
   }
 }
 
-.sectionname {
-  position: absolute;
-  text-align: center;
-  font-size: 2rem;
-  writing-mode: vertical-rl;
-  left: 90px;
-  top: 65%;
+/* For tablets: */
+@media only screen and (max-width: 768px) {
+  h1 {
+    
+    font-size: 3rem;
+  }
+  
+  h2 {
+    
+    font-size: 8rem;
+  }
+  
+  h3 {
+    font-size: 3.5pt;
+  }
+  
+  p {
+    font-size: 4rem;
+  }
+  
+  li {
+    font-size: 3rem;
+  }
+
+  .sectionname{
+    font-size: 1.5rem;
+    left: 6rem;
+  }
+
+  .verticalLine {
+    display: box;
+    border-left: 3pt solid #ff4d5a;
+    height: 55%;
+    position: fixed;
+    margin-left: 6rem;
+  }
+
+  #fp-nav.fp-left{
+    left:7px;
+  }
+
 }
+
 
 @import "home";
 @import "projects";
