--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -238,10 +238,10 @@ input[type="submit"] {
         grid-row: 2/3;
         grid-column: 2/4;
         align-self:center;
-        justify-self: center;
+        justify-self: end;
         position: relative;
-        top:0;
-        left:0;
+        top:-10rem;
+        left:2rem;
         right:0;
         bottom:0;
         
