--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,6 @@ body {
   transition: all 1s ease-in-out;
 }
 
-/* For tablets: */
 /*vse za dnevno temo*/
 body.day {
   color: #061a33;
@@ -212,7 +211,7 @@ body.day #fp-nav ul li a span,
 }
 
 /* For tablets: */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 800px) {
   h1 {
     font-size: 3rem;
   }
@@ -241,6 +240,42 @@ body.day #fp-nav ul li a span,
   }
   #fp-nav.fp-left {
     left: 7px;
+  }
+}
+
+/* For mobile: */
+@media only screen and (max-width: 440px) {
+  h1 {
+    font-size: 3rem;
+  }
+  h2 {
+    font-size: 5rem;
+  }
+  h3 {
+    font-size: 2.5pt;
+  }
+  p {
+    font-size: 3rem;
+  }
+  li {
+    font-size: 2rem;
+  }
+  .sectionname {
+    font-size: 1.5rem;
+    left: 6rem;
+    top: 80%;
+  }
+  .verticalLine {
+    display: box;
+    border-left: 2pt solid #ff4d5a;
+    height: 20%;
+    position: fixed;
+    top: 80%;
+    margin-left: 6rem;
+  }
+  #fp-nav.fp-left {
+    left: 7px;
+    top: 90%;
   }
 }
 
@@ -594,11 +629,31 @@ header .menu-btn.open .menu-btn__burger::after {
   margin-left: 12rem;
 }
 
-/* For tablets: */
-@media only screen and (max-width: 768px) {
+/*responsive menu*/
+@media only screen and (max-width: 1024px) {
   .menu-kontakt {
     display: none;
   }
+}
+
+@media only screen and (max-width: 600px) {
+  .menu-linkedin {
+    display: none;
+  }
+  header nav ul {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
+  header nav #logo1 {
+    -webkit-box-flex: 1.5;
+        -ms-flex: 1.5;
+            flex: 1.5;
+  }
+}
+
+/* For tablets: */
+@media only screen and (max-width: 800px) {
   /* VSEBINA */
   .showcase {
     display: -ms-grid;
@@ -620,12 +675,15 @@ header .menu-btn.open .menu-btn__burger::after {
     grid-column: 2/5;
     -ms-flex-item-align: end;
         align-self: flex-end;
-    justify-self: flex-start;
-    margin-left: 5rem;
+    -ms-grid-column-align: center;
+        justify-self: center;
+    margin-left: 0rem;
     margin-bottom: 5rem;
   }
   .showcase h2 span {
-    margin-left: 18rem;
+    -ms-grid-column-align: center;
+        justify-self: center;
+    margin-left: 0rem;
   }
   .showcase .pike {
     -ms-grid-row: 2;
@@ -636,9 +694,10 @@ header .menu-btn.open .menu-btn__burger::after {
     grid-column: 2/5;
     -ms-flex-item-align: end;
         align-self: flex-end;
-    justify-self: flex-start;
+    -ms-grid-column-align: center;
+        justify-self: center;
     position: relative;
-    left: 23rem;
+    left: -1rem;
     top: -5rem;
   }
   .showcase .pike .homedot {
@@ -704,7 +763,100 @@ header .menu-btn.open .menu-btn__burger::after {
     margin-bottom: 10rem;
   }
   .showcase p span {
-    margin-left: 12rem;
+    margin-left: 8rem;
+  }
+}
+
+/* For mobile: */
+@media only screen and (max-width: 440px) {
+  /* VSEBINA */
+  .sidebar {
+    width: 20rem;
+  }
+  .showcase {
+    -ms-grid-columns: 5% 1fr 5%;
+        grid-template-columns: 5% 1fr 5%;
+    -ms-grid-rows: 68px 1fr 2fr;
+        grid-template-rows: 68px 1fr 2fr;
+  }
+  .showcase h2 {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+    -ms-grid-column-align: center;
+        justify-self: center;
+    margin-left: 0rem;
+    margin-bottom: 5rem;
+  }
+  .showcase h2 span {
+    -ms-grid-column-align: center;
+        justify-self: center;
+    margin-left: 0rem;
+  }
+  .showcase .pike {
+    display: none;
+  }
+  .showcase .paralax-container {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 2;
+    grid-row: 2/4;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-column: 1/4;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    -ms-grid-column-align: center;
+        justify-self: center;
+    margin-bottom: 0rem;
+    z-index: -1;
+  }
+  .showcase .paralax-container img {
+    width: 100vw;
+    height: auto;
+  }
+  .showcase .paralax-container-2 {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 2;
+    grid-row: 2/4;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-column: 1/4;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    -ms-grid-column-align: center;
+        justify-self: center;
+    margin-bottom: 0rem;
+    z-index: -1;
+    display: none;
+  }
+  .showcase .paralax-container-2 img {
+    width: 100vw;
+    height: auto;
+  }
+  .showcase p {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 3;
+    grid-column: 2/5;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    -ms-grid-column-align: start;
+        justify-self: start;
+    margin-bottom: 0;
+    margin-top: 20rem;
+  }
+  .showcase p span {
+    margin-left: 8rem;
   }
 }
 
@@ -1361,7 +1513,7 @@ input[type="submit"] {
 }
 
 /* For tablets: */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 800px) {
   /* VSEBINA */
   .kontakt {
     display: -ms-grid;
