--- a/styles/style.scss
+++ b/styles/style.scss
@@ -16,12 +16,6 @@ body {
   transition: all 1s ease-in-out;
 }
 
-/* For tablets: */
-@media only screen and (max-width: 768px) {
-
-
-}
-
 
 
 /*vse za dnevno temo*/
@@ -204,7 +198,7 @@ body.day #fp-nav ul li a span,
 }
 
 /* For tablets: */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 800px) {
   h1 {
     
     font-size: 3rem;
@@ -242,6 +236,52 @@ body.day #fp-nav ul li a span,
 
   #fp-nav.fp-left{
     left:7px;
+  }
+
+}
+
+/* For mobile: */
+@media only screen and (max-width: 440px) {
+  h1 {
+    
+    font-size: 3rem;
+  }
+  
+  h2 {
+    
+    font-size: 5rem;
+  }
+  
+  h3 {
+    font-size: 2.5pt;
+  }
+  
+  p {
+    font-size: 3rem;
+  }
+  
+  li {
+    font-size: 2rem;
+  }
+
+  .sectionname{
+    font-size: 1.5rem;
+    left: 6rem;
+    top: 80%
+  }
+
+  .verticalLine {
+    display: box;
+    border-left: 2pt solid #ff4d5a;
+    height: 20%;
+    position: fixed;
+    top:80%;
+    margin-left: 6rem;
+  }
+
+  #fp-nav.fp-left{
+    left:7px;
+    top:90%;
   }
 
 }
