--- a/styles/style.css
+++ b/styles/style.css
@@ -262,7 +262,7 @@ body.day #fp-nav ul li a span,
   }
   .sectionname {
     font-size: 1.5rem;
-    left: 6rem;
+    left: 4rem;
     top: 80%;
   }
   .verticalLine {
@@ -1513,7 +1513,7 @@ input[type="submit"] {
 }
 
 /* For tablets: */
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1024px) {
   /* VSEBINA */
   .kontakt {
     display: -ms-grid;
@@ -1521,46 +1521,12 @@ input[type="submit"] {
     height: 100vh;
     -ms-flex-line-pack: stretch;
         align-content: stretch;
-    -ms-grid-columns: 6rem 1fr 2fr 5%;
-        grid-template-columns: 6rem 1fr 2fr 5%;
-    -ms-grid-rows: 68px 1fr 1fr;
-        grid-template-rows: 68px 1fr 1fr;
+    -ms-grid-columns: 6rem 1fr 5%;
+        grid-template-columns: 6rem 1fr 5%;
+    -ms-grid-rows: 68px 0.5fr 1.5fr;
+        grid-template-rows: 68px 0.5fr 1.5fr;
   }
   .kontakt h2 {
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2/3;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 2;
-    grid-column: 2/4;
-    -ms-flex-item-align: start;
-        -ms-grid-row-align: start;
-        align-self: start;
-    -ms-grid-column-align: start;
-        justify-self: start;
-    margin-left: 5rem;
-    margin-top: 5rem;
-  }
-  .kontakt h2 span {
-    display: inline-block;
-    margin-left: 0rem;
-  }
-  .kontakt p {
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    grid-row: 3/4;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 2;
-    grid-column: 2/4;
-    -ms-flex-item-align: end;
-        -ms-grid-row-align: end;
-        align-self: end;
-    -ms-grid-column-align: start;
-        justify-self: start;
-    margin-left: 5rem;
-    margin-bottom: 8rem;
-  }
-  .kontakt .pike {
     -ms-grid-row: 2;
     -ms-grid-row-span: 1;
     grid-row: 2/3;
@@ -1570,26 +1536,39 @@ input[type="submit"] {
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
-    -ms-grid-column-align: end;
-        justify-self: end;
-    position: relative;
-    top: -10rem;
-    left: 2rem;
-    right: 0;
-    bottom: 0;
+    -ms-grid-column-align: center;
+        justify-self: center;
+    margin-left: 5rem;
+    margin-top: 1rem;
+    padding-bottom: 1rem;
   }
-  .kontakt .pike .homedot {
-    margin: 0 20px 0 0;
-    height: 0.8rem;
-    width: 0.8rem;
-    background-color: red;
-    border-radius: 50%;
+  .kontakt h2 span {
     display: inline-block;
+    margin-left: 0rem;
+  }
+  .kontakt p {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
+    grid-column: 2/4;
+    -ms-flex-item-align: end;
+        -ms-grid-row-align: end;
+        align-self: end;
+    -ms-grid-column-align: center;
+        justify-self: center;
+    margin-left: 0rem;
+    margin-bottom: 2rem;
+    font-size: 2rem;
+  }
+  .kontakt .pike {
+    display: none;
   }
   .kontaktcontainer {
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 2;
-    grid-row: 2/4;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
     -ms-grid-column: 2;
     -ms-grid-column-span: 2;
     grid-column: 2/4;
@@ -1599,6 +1578,183 @@ input[type="submit"] {
         align-self: center;
     -ms-grid-column-align: center;
         justify-self: center;
+  }
+}
+
+/* For mobile: */
+@media only screen and (max-width: 440px) {
+  /* VSEBINA */
+  .kontakt {
+    display: -ms-grid;
+    display: grid;
+    height: 100vh;
+    -ms-flex-line-pack: stretch;
+        align-content: stretch;
+    -ms-grid-columns: 5% 1fr 5%;
+        grid-template-columns: 5% 1fr 5%;
+    -ms-grid-rows: 68px minmax(0.5fr, 1fr) minmax(2fr, auto);
+        grid-template-rows: 68px minmax(0.5fr, 1fr) minmax(2fr, auto);
+  }
+  .kontakt h2 {
+    -ms-flex-item-align: start;
+        -ms-grid-row-align: start;
+        align-self: start;
+    -ms-grid-column-align: center;
+        justify-self: center;
+  }
+  /*kontaktna forma*/
+  .kontaktcontainer {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    width: 80%;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    -ms-grid-column-align: end;
+        justify-self: end;
+    padding: 1.5rem;
+    background: #061a33;
+    border: 2px solid #eeffff;
+    margin-bottom: 10%;
+  }
+  .kontaktcontainer .row100 {
+    position: relative;
+    width: 100%;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (minmax(300px, 1fr))[autofit];
+        grid-template-columns: repeat(autofit, minmax(300px, 1fr));
+  }
+  .kontaktcontainer .row100 .col {
+    position: relative;
+    width: 100%;
+    padding: 0 1rem;
+    margin: 1rem 0 1rem;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+  }
+  .kontaktcontainer .row100 .inputBox {
+    position: relative;
+    width: 100%;
+    height: 2.5rem;
+    color: #eeffff;
+  }
+  .kontaktcontainer .row100 .inputBox input {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    border: none;
+    outline: none;
+    font-size: 1.3rem;
+    padding: 0 1rem;
+    z-index: 1;
+    color: #061a33;
+  }
+  .kontaktcontainer .row100 .inputBox textarea {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    border: none;
+    outline: none;
+    font-size: 1.5rem;
+    padding: 0 1rem;
+    z-index: 1;
+    color: #061a33;
+  }
+  .kontaktcontainer .row100 .inputBox .text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    line-height: 2rem;
+    font-size: 1.5rem;
+    padding: 0px 1rem;
+    display: block;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    pointer-events: none;
+  }
+  .kontaktcontainer .row100 .inputBox .sporocilo {
+    position: absolute;
+    top: 2.5rem;
+    left: 0;
+    line-height: 1.5rem;
+    font-size: 1.5rem;
+    padding: 0px 1rem;
+    display: block;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    pointer-events: none;
+  }
+  .kontaktcontainer .row100 .inputBox input:focus + .text {
+    top: -1.6rem;
+    left: -1rem;
+  }
+  .kontaktcontainer .row100 .inputBox input:valid + .text {
+    top: -1.6rem;
+    left: -1rem;
+  }
+  .kontaktcontainer .row100 .inputBox .line {
+    position: absolute;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 2px;
+    background: #eeffff;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    border-radius: 2px;
+    pointer-events: none;
+  }
+  .kontaktcontainer .row100 .inputBox input:focus ~ .line {
+    height: 100%;
+  }
+  .kontaktcontainer .row100 .inputBox input:valid ~ .line {
+    height: 100%;
+  }
+  .kontaktcontainer .row100 .inputBox textarea:focus + .text {
+    top: -1.6rem;
+    left: -1rem;
+  }
+  .kontaktcontainer .row100 .inputBox textarea:valid + .text {
+    top: -1.6rem;
+    left: -1rem;
+  }
+  .kontaktcontainer .row100 .inputBox textarea:focus ~ .line {
+    height: 100%;
+  }
+  .kontaktcontainer .row100 .inputBox textarea:valid ~ .line {
+    height: 100%;
+  }
+  .kontaktcontainer .row100 .textarea {
+    position: relative;
+    width: 100%;
+    height: 5rem;
+    padding: 1rem 0;
+    resize: none;
+  }
+  .kontaktcontainer .row100 .textarea textarea {
+    height: 100%;
+    resize: none;
+  }
+  input[type="submit"] {
+    border: none;
+    font-family: "Russo One", sans-serif;
+    padding: 7px 35px;
+    cursor: pointer;
+    outline: none;
+    background: #ff4d5a;
+    font-size: 1.5rem;
+    border-radius: 2rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
