--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -131,49 +131,52 @@ header {
 }
 
 /*night/day mode*/
-.checkbox {
-  opacity: 0;
-  position: absolute;
-}
+.day_night_container {
+  align-self: center;
+  margin-bottom: 1.5rem;
+  .checkbox {
+    opacity: 0;
+    position: absolute;
+  }
 
-.label {
-  background-color: rgb(121, 121, 115);
-  border-radius: 50px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 5px;
-  position: relative;
-  height: 26px;
-  width: 50px;
-  transform: scale(1.5);
-}
+  .label {
+    background-color: rgb(121, 121, 115);
+    border-radius: 50px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px;
+    position: relative;
+    height: 26px;
+    width: 50px;
+    transform: scale(1.5);
+  }
 
-.label .ball {
-  background-color: #eeffff;
-  border-radius: 50%;
-  position: absolute;
-  top: 2px;
-  left: 2px;
-  height: 22px;
-  width: 22px;
-  transform: translateX(0px);
-  transition: transform 0.2s linear;
-}
+  .label .ball {
+    background-color: #eeffff;
+    border-radius: 50%;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    height: 22px;
+    width: 22px;
+    transform: translateX(0px);
+    transition: transform 0.2s linear;
+  }
 
-.checkbox:checked + .label .ball {
-  transform: translateX(24px);
-}
+  .checkbox:checked + .label .ball {
+    transform: translateX(24px);
+  }
 
-.fa-moon {
-  color: #f1c40f;
-}
+  .fa-moon {
+    color: #f1c40f;
+  }
 
-.fa-sun {
-  color: #ff4d5a;
+  .fa-sun {
+    color: #ff4d5a;
+  }
 }
-
 /* VSEBINA */
 .showcase {
   display: grid;
@@ -427,6 +430,47 @@ header {
       span {
         margin-left: 8rem;
       }
+    }
+  }
+
+  .day_night_container {
+    align-self: center;
+    margin-bottom: 1.5rem;
+    .label {
+      background-color: rgb(121, 121, 115);
+      border-radius: 50px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 5px;
+      position: relative;
+      height: 19.5px;
+      width: 38.5px;
+      transform: scale(1.5);
+    }
+
+    .label .ball {
+      border-radius: 50%;
+      position: absolute;
+      top: 1.5px;
+      left: 1.5px;
+      height: 16.5px;
+      width: 16.5px;
+      transform: translateX(0px);
+      transition: transform 0.2s linear;
+    }
+
+    .checkbox:checked + .label .ball {
+      transform: translateX(18px);
+    }
+
+    .fa-moon {
+      color: #f1c40f;
+    }
+
+    .fa-sun {
+      color: #ff4d5a;
     }
   }
 }
