--- a/styles/style.css
+++ b/styles/style.css
@@ -458,12 +458,19 @@ header .menu-btn.open .menu-btn__burger::after {
 }
 
 /*night/day mode*/
-.checkbox {
+.day_night_container {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-bottom: 1.5rem;
+}
+
+.day_night_container .checkbox {
   opacity: 0;
   position: absolute;
 }
 
-.label {
+.day_night_container .label {
   background-color: #797973;
   border-radius: 50px;
   cursor: pointer;
@@ -484,7 +491,7 @@ header .menu-btn.open .menu-btn__burger::after {
           transform: scale(1.5);
 }
 
-.label .ball {
+.day_night_container .label .ball {
   background-color: #eeffff;
   border-radius: 50%;
   position: absolute;
@@ -500,16 +507,16 @@ header .menu-btn.open .menu-btn__burger::after {
   transition: transform 0.2s linear, -webkit-transform 0.2s linear;
 }
 
-.checkbox:checked + .label .ball {
+.day_night_container .checkbox:checked + .label .ball {
   -webkit-transform: translateX(24px);
           transform: translateX(24px);
 }
 
-.fa-moon {
+.day_night_container .fa-moon {
   color: #f1c40f;
 }
 
-.fa-sun {
+.day_night_container .fa-sun {
   color: #ff4d5a;
 }
 
@@ -857,6 +864,56 @@ header .menu-btn.open .menu-btn__burger::after {
   }
   .showcase p span {
     margin-left: 8rem;
+  }
+  .day_night_container {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    margin-bottom: 1.5rem;
+  }
+  .day_night_container .label {
+    background-color: #797973;
+    border-radius: 50px;
+    cursor: pointer;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding: 5px;
+    position: relative;
+    height: 19.5px;
+    width: 38.5px;
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+  }
+  .day_night_container .label .ball {
+    border-radius: 50%;
+    position: absolute;
+    top: 1.5px;
+    left: 1.5px;
+    height: 16.5px;
+    width: 16.5px;
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+    -webkit-transition: -webkit-transform 0.2s linear;
+    transition: -webkit-transform 0.2s linear;
+    transition: transform 0.2s linear;
+    transition: transform 0.2s linear, -webkit-transform 0.2s linear;
+  }
+  .day_night_container .checkbox:checked + .label .ball {
+    -webkit-transform: translateX(18px);
+            transform: translateX(18px);
+  }
+  .day_night_container .fa-moon {
+    color: #f1c40f;
+  }
+  .day_night_container .fa-sun {
+    color: #ff4d5a;
   }
 }
 
@@ -1521,8 +1578,8 @@ input[type="submit"] {
     height: 100vh;
     -ms-flex-line-pack: stretch;
         align-content: stretch;
-    -ms-grid-columns: 6rem 1fr 5%;
-        grid-template-columns: 6rem 1fr 5%;
+    -ms-grid-columns: 5% 1fr 5%;
+        grid-template-columns: 5% 1fr 5%;
     -ms-grid-rows: 68px 0.5fr 1.5fr;
         grid-template-rows: 68px 0.5fr 1.5fr;
   }
@@ -1531,8 +1588,8 @@ input[type="submit"] {
     -ms-grid-row-span: 1;
     grid-row: 2/3;
     -ms-grid-column: 2;
-    -ms-grid-column-span: 2;
-    grid-column: 2/4;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
@@ -1551,8 +1608,8 @@ input[type="submit"] {
     -ms-grid-row-span: 1;
     grid-row: 2/3;
     -ms-grid-column: 2;
-    -ms-grid-column-span: 2;
-    grid-column: 2/4;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
     -ms-flex-item-align: end;
         -ms-grid-row-align: end;
         align-self: end;
