--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -397,7 +397,7 @@ header {
       grid-column: 1/4;
       align-self: center;
       justify-self: center;
-      margin-bottom: 0rem;
+      margin-top: 15rem;
       z-index: -1;
 
       img {
@@ -411,7 +411,7 @@ header {
       grid-column: 1/4;
       align-self: center;
       justify-self: center;
-      margin-bottom: 0rem;
+      margin-top: 17rem;
       z-index: -1;
       display: none;
 
@@ -423,10 +423,11 @@ header {
     p {
       grid-row: 3/4;
       grid-column: 2/5;
-      align-self: center;
-      justify-self: start;
-      margin-bottom: 0;
-      margin-top: 20rem;
+      align-self: start;
+      justify-self: center;
+      margin-bottom: 0rem;
+      margin-top: -7%;
+      margin-left:0;
       span {
         margin-left: 8rem;
       }
