--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -372,6 +372,7 @@ header {
     width: 20rem;
   }
   .showcase {
+    height:90vh;
     grid-template-columns: 5% 1fr 5%;
     grid-template-rows: 68px 1fr 2fr;
 
