--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -373,6 +373,8 @@ header {
   }
   .showcase {
     height:90vh;
+    position: absolute;
+    top:0;
     grid-template-columns: 5% 1fr 5%;
     grid-template-rows: 68px 1fr 2fr;
 
@@ -394,11 +396,11 @@ header {
     }
 
     .paralax-container {
-      grid-row: 2/4;
+      grid-row: 3/4;
       grid-column: 1/4;
-      align-self: end;
+      align-self: start;
       justify-self: center;
-      margin-top: 0rem;
+      margin-top: 5rem;
       margin-bottom: 0rem;
       z-index: -1;
 
@@ -409,11 +411,11 @@ header {
     }
 
     .paralax-container-2 {
-      grid-row: 2/4;
+      grid-row: 3/4;
       grid-column: 1/4;
-      align-self: end;
+      align-self: start;
       justify-self: center;
-      margin-top: 0rem;
+      margin-top: 5rem;
       margin-bottom:0rem;
       z-index: -1;
       display: none;
