--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -1,4 +1,7 @@
 .kontakt {
+  position: absolute;
+  top:0;
+  width: 100%;
   display: grid;
   height: 100vh;
   align-content: stretch;
@@ -17,16 +20,31 @@
       margin-left: 27rem;
     }
   }
-  p {
-    grid-row: 3/4;
-    grid-column: 2/4;
-    align-self: flex-start;
-    justify-self: flex-start;
-    margin-left: 8rem;
-    font-size: 3.5rem;
-    .fas {
-      margin-right: 1rem;
+  ul{
+    grid-row:3/4;
+    grid-column: 2/3;
+    align-self:center;
+    justify-self: center;
+    list-style-type: none;
+    li{
+      padding:2rem;
+      .fas, .fab{
+        margin-right: 1rem;
+      }
     }
+  }
+  p {
+    font-size: 3.5rem;
+ 
+  }
+
+  .besedilo{
+    grid-row: 3/4;
+    grid-column: 2/3;
+    align-self: start;
+    justify-self: center;
+    margin-left:5rem;
+
   }
 
   .pike {
@@ -213,7 +231,7 @@ input[type="submit"] {
     height: 100vh;
     align-content: stretch;
     grid-template-columns: 5% 1fr 5%;
-    grid-template-rows: 68px 0.5fr 1.5fr;
+    grid-template-rows: 68px 0.7fr 1.5fr;
 
     h2 {
       grid-row: 2/3;
@@ -221,21 +239,36 @@ input[type="submit"] {
       align-self: center;
       justify-self: center;
       margin-left: 5rem;
-      margin-top: 1rem;
+      margin-top: 0rem;
       padding-bottom: 1rem;
+      text-align:center;
+      line-height: 80%;
       span {
         display: inline-block;
         margin-left: 0rem;
       }
     }
-    p {
-      grid-row: 2/3;
+    ul{
+      grid-row:2/3;
       grid-column: 2/3;
-      align-self: end;
+      align-self:end;
       justify-self: center;
-      margin-left: 0rem;
-      margin-bottom: 2rem;
-      font-size: 2rem;
+      list-style-type: none;
+      li{
+        padding:1rem;
+        .fas, .fab{
+          margin-right: 1rem;
+        }
+      }
+    }
+    p {
+      font-size: 2.5rem;
+   
+    }
+  
+    .besedilo{
+      display:none;
+  
     }
 
     .pike {
@@ -255,173 +288,71 @@ input[type="submit"] {
 /* For mobile: */
 @media only screen and (max-width: 440px) {
   /* VSEBINA */
+
+  
   .kontakt {
     display: grid;
     height: 100vh;
     align-content: stretch;
     grid-template-columns: 5% 1fr 5%;
-    grid-template-rows: 68px minmax(0.5fr, 1fr) minmax(2fr, auto);
+    grid-template-rows: 68px 0.8fr 1fr;
+
     h2 {
+      grid-row: 2/3;
+      grid-column: 2/3;
       align-self: start;
       justify-self: center;
+      margin-left: 0rem;
+      margin-top: 4rem;
+      padding-bottom: 1rem;
+      text-align:center;
+      span {
+        display: block;
+        margin-left: 0rem;
+      }
+    }
+    ul{
+      grid-row:3/4;
+      grid-column: 2/3;
+      align-self:start;
+      justify-self: center;
+      list-style-type: none;
+      margin-top:4rem;
+      text-align:center;
+      li{
+        padding:1rem;
+        
+        .fas, .fab{
+          margin-right: 1rem;
+        }
+      }
+    }
+    p {
+      font-size: 1.8rem;
+   
+    }
+  
+    .besedilo{
+      display:block;
+      grid-row:2/3;
+      grid-column: 2/3;
+      align-self:end;
+      justify-self: center;
+      font-size:2rem;
+      margin-top:0rem;
+      margin-left:0rem;
+      text-align: center;
+
+  
+    }
+
+    .pike {
+      display: none;
     }
   }
-
-  /*kontaktna forma*/
 
   .kontaktcontainer {
-    grid-row: 3/4;
-    grid-column: 2/3;
-    width: 80%;
-    align-self: center;
-    justify-self: end;
-    padding: 1.5rem;
-    background: #061a33;
-    border: 2px solid #eeffff;
-    margin-bottom: 10%;
-
-    .row100 {
-      position: relative;
-      width: 100%;
-      display: grid;
-      grid-template-columns: repeat(autofit, minmax(300px, 1fr));
-
-      .col {
-        position: relative;
-        width: 100%;
-        padding: 0 1rem;
-        margin: 1rem 0 1rem;
-        transition: 0.5s;
-      }
-
-      .inputBox {
-        position: relative;
-        width: 100%;
-        height: 2.5rem;
-        color: #eeffff;
-
-        input {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          background: transparent;
-          box-shadow: none;
-          border: none;
-          outline: none;
-          font-size: 1.3rem;
-          padding: 0 1rem;
-          z-index: 1;
-          color: #061a33;
-        }
-
-        textarea {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          background: transparent;
-          box-shadow: none;
-          border: none;
-          outline: none;
-          font-size: 1.5rem;
-          padding: 0 1rem;
-          z-index: 1;
-          color: #061a33;
-        }
-
-        .text {
-          position: absolute;
-          top: 0;
-          left: 0;
-          line-height: 2rem;
-          font-size: 1.5rem;
-          padding: 0px 1rem;
-          display: block;
-          transition: 0.5s;
-          pointer-events: none;
-        }
-
-        .sporocilo {
-          position: absolute;
-          top: 2.5rem;
-          left: 0;
-          line-height: 1.5rem;
-          font-size: 1.5rem;
-          padding: 0px 1rem;
-          display: block;
-          transition: 0.5s;
-          pointer-events: none;
-        }
-
-        input:focus + .text {
-          top: -1.6rem;
-          left: -1rem;
-        }
-
-        input:valid + .text {
-          top: -1.6rem;
-          left: -1rem;
-        }
-
-        .line {
-          position: absolute;
-          bottom: 0;
-          display: block;
-          width: 100%;
-          height: 2px;
-          background: #eeffff;
-          transition: 0.5s;
-          border-radius: 2px;
-          pointer-events: none;
-        }
-
-        input:focus ~ .line {
-          height: 100%;
-        }
-
-        input:valid ~ .line {
-          height: 100%;
-        }
-        textarea:focus + .text {
-          top: -1.6rem;
-          left: -1rem;
-        }
-
-        textarea:valid + .text {
-          top: -1.6rem;
-          left: -1rem;
-        }
-        textarea:focus ~ .line {
-          height: 100%;
-        }
-
-        textarea:valid ~ .line {
-          height: 100%;
-        }
-      }
-
-      .textarea {
-        position: relative;
-        width: 100%;
-        height: 5rem;
-        padding: 1rem 0;
-        resize: none;
-
-        textarea {
-          height: 100%;
-          resize: none;
-        }
-      }
-    }
-  }
-
-  input[type="submit"] {
-    border: none;
-    font-family: "Russo One", sans-serif;
-    padding: 7px 35px;
-    cursor: pointer;
-    outline: none;
-    background: #ff4d5a;
-    font-size: 1.5rem;
-    border-radius: 2rem;
+    display: none;
   }
 }
+
